--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,7 +10,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6, p, ul {
