--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,6 +2,8 @@
   <head>
     <meta charset="utf-8">
     <title>React Ethereum</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    
   </head>
   <body>
     <div id="root"></div>
