--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,9 @@
   <head>
     <meta charset="utf-8">
     <title>React Ethereum</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    
   </head>
   <body>
     <div id="root"></div>
