--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
     <title>React Ethereum</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet" type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     
   </head>
